# mastermind_proyect

./: README.md  main.py  markers.toml  pyproject.toml  pytest.toml
src/: check_colors.py  control_population.py  create_fitness_dictionary.py  generate_combinations.py  global_constants.py  input_user.py  interpretate_dictionary.py  mastermind_main.py  mix_generations.py  return_colors.py  select_parents.py
test/: test_check_colors.py  test_control_population.py  test_generate_combinations.py  test_input_user.py  test_mix_generations.py  test_select_parents.py
