[project]
name = "mastermind-proyect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.7",
    "pytest>=9.0.1",
    "pytest-coverage>=0.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.14.8",
]
